fix #15901 - `--load-preferences` crashes on simple filename
git-svn-id: http://josm.openstreetmap.de/svn/trunk@13402 0c6e7542-c601-0410-84e7-c038aed88b3b